2003-10-08 01:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added include for GSNibTemplates.h removed some
	comments and cleaned up the code.  In _replaceObjectsWithTemplates:
	removed <GSTemplate> which was causing some compiler warnings.
	Added code to set the defer flag on the template for any template
	which responds to setDeferFlag:.
	* Palettes/1Windows/main.m: Added braces.  Minor code cleanup.
	* Palettes/1Windows/GormNSWindowInspector.gorm: Enabled defer 
	flag.

2003-10-08 00:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* Version 0.4.0
	
2003-09-28 19:32 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Removed some ivars which were not being used.
	Added declarations for methods setWindowsMenu, setServicesMenu,
	servicesMenu, windowsMenu.
	* GormDocument.m: Added implementation of above methods.
	* Palettes/0Menus/GormMenuInspectors.m: Added implementation of method
	updateMenuType which sets the menu appropriately so that when
	the file is unarchived the proper menu setting is reflected.
	* Palettes/0Menus/GormMenuAttributesInspector.m: Added connection
	for method updateMenuType.
	* Resources/Gorm.gorm: Designated services and windows menus for Gorm.

2003-09-27 21:58 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GNUmakefile: Add .gorm files for new inspectors
	* Palettes/0Menus/GormMenuEditor.m: Re-added assertion to ensure 
	consistency.  Code cleanup: Got rid of some commented out code and
	some code which was for logging purposes only.
	* Palettes/0Menus/GormNSMenu.m: Removed some old code which was for
	debugging.
	* Palettes/0Menus/GormMenuInspectors.m: Removed hardcoded GUI and
	replaced it with the loading of the appropriate .gorm files for each
	inspector.
	* Palettes/0Menus/GormMenuAttributesInspector.gorm: New gui for menu
	inspector.  Also added the beginnings of the mechanizm by which the
	services/windows menus will be specified.