@@ -517,9 +517,9 @@ NSString *GormDidDeleteClassNotification = @"GormDidDeleteClassNotification";
      forKey: @"ApplicationName"];
   [dict setObject: @"[GNUstep | Graphical] Object Relationship Modeller"
      forKey: @"ApplicationDescription"];
-  [dict setObject: @"Gorm 0.4.0 (Beta)" 
+  [dict setObject: @"Gorm 0.4.1 (Beta)" 
      forKey: @"ApplicationRelease"];
-  [dict setObject: @"0.4.0 Oct 01 2003" 
+  [dict setObject: @"0.4.1 Oct 12 2003" 
      forKey: @"FullVersionID"];
   [dict setObject: [NSArray arrayWithObjects: @"Gregory John Casamento <greg_casamento@yahoo.com>",
 			 @"Richard Frith-Macdonald <rfm@gnu.org>",
